<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="action_settings">Settings</string>
    <string name="input_value">\'Input value\'</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="input_value1">Input Value</string>
    <string name="blank" />
    <string name="converter">Converter</string>
    <string name="currency">Currency</string>
</resources>
