<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#53f2df"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignStart="@+id/spinner1" />

    <TextView
        android:text="@string/blank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:fontFamily="monospace"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="25sp"
        android:fontFamily="monospace"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

    <ImageView
        app:srcCompat="@drawable/arrow"
        android:id="@+id/imageView4"
        android:translationX="0dp"
        android:translationZ="0dp"
        android:rotation="0"
        android:layout_height="70dp"
        android:layout_width="60dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/spinner1"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6" />

    <Button
        android:text="@string/convert_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="25sp"
        android:fontFamily="monospace"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="normal|bold"
        android:layout_marginTop="28dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imageView3"
        android:layout_toStartOf="@+id/imageView3" />

    <ImageView
        android:layout_width="70dp"
        app:srcCompat="@drawable/currency"
        android:id="@+id/imageView3"
        android:contentDescription=""
        android:layout_height="70dp"
        android:layout_alignTop="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:ems="10"
        android:hint="@string/input_value1"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true">

        <requestFocus />
    </EditText>


</RelativeLayout>
